--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,12 @@ services:
     depends_on:
       - couchdb
       - redis
+    labels:
+      traefik.docker.network: "web"
+      traefik.cozy_cloud.frontend.rule: Host:cozy.tams.tech,onboarding.cozy.tams.tech,settings.cozy.tams.tech,drive.cozy.tams.tech,photos.cozy.tams.tech,home.cozy.tams.tech,store.cozy.tams.tech
+      traefik.cozy_cloud.port: 8080
+      traefik.cozy_cloud.protocol: http
+      traefik.enable: "true"
 
 networks:
   web:
